Modificações no arquivo de intensivo HTML

--- a/intensivo_html_5/index.html
+++ b/intensivo_html_5/index.html
@@ -57,7 +57,6 @@
                 </tr>
             </tbody>
         </table>
-
         <br>
         <br>
         <br>
@@ -71,15 +70,35 @@
             </div>
             <div>
                 <label>Nome do seu partido</label>
-                <input type="text">
+                <input type="text" placeholder="Somente sigla">
             </div>
             <div>
                 <label>Email</label>
-                <input type="email">
+                <input type="email" placeholder="Seu melhro e-mail">
             </div>
+            <div>
+                <label>Gênero</label>
+                <select name="" id="">
+                    <option value="masculino">Masculino</option>
+                    <option value="feminino">Feminino</option>
+                </select>
+            </div>
+            <div>
+                <label>Data de nascimento</label>
+                <input type="date">
+            </div>
+            <div>
+                <label>Senha</label>
+                <input type="password" placeholder="Senha forte">
+            </div>
+            <div>
+                <label>Mensagem</label><br>
+                <textarea name="mensagem" id="" cols="30" rows="10"></textarea>
+            </div>
+            <input type="submit">
         </form>
 
-        <!-- Parando vídeo em 24:40min -->
+        <!-- Parando vídeo em 28:16min -->
 
     </body>
 </html>
